[gd_scene load_steps=8 format=3 uid="uid://omtvob7lkl85"]

[ext_resource type="Script" uid="uid://bpc17ymc5fvvv" path="res://scripts/card/card.gd" id="1_imta7"]
[ext_resource type="Texture2D" uid="uid://di0c33j0860id" path="res://assets/graphics/cards/card_highlight.png" id="2_imta7"]
[ext_resource type="Texture2D" uid="uid://dytl7rqvsxjnk" path="res://assets/graphics/cards/common/card_background_for_energy_balls.png" id="3_g65cd"]
[ext_resource type="Theme" uid="uid://gu54ssij03su" path="res://resources/theme/main_theme.tres" id="4_g65cd"]

[sub_resource type="Gradient" id="Gradient_g65cd"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2ufkr"]
gradient = SubResource("Gradient_g65cd")
width = 32
height = 24

[sub_resource type="RectangleShape2D" id="RectangleShape2D_imta7"]
size = Vector2(40, 60)

[node name="Card" type="Area2D"]
z_index = 1
input_pickable = false
script = ExtResource("1_imta7")

[node name="CardHighlight" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_imta7")

[node name="CardImage" type="Sprite2D" parent="."]
position = Vector2(-16, -26)
texture = SubResource("GradientTexture2D_2ufkr")
centered = false

[node name="CardFrame" type="Sprite2D" parent="."]
texture = ExtResource("3_g65cd")
region_rect = Rect2(0, 0, 40, 60)

[node name="CardShape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_imta7")

[node name="EnergyBallContainer" type="VBoxContainer" parent="."]
offset_left = -21.0
offset_top = -29.0
offset_right = -21.0
offset_bottom = -29.0
theme_override_constants/separation = 2

[node name="Name" type="Label" parent="."]
offset_left = -18.0
offset_right = 18.0
offset_bottom = 6.0
theme = ExtResource("4_g65cd")
text = "NAME"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 1
uppercase = true

[node name="Description" type="Node2D" parent="."]
position = Vector2(-13, 10)

[node name="ActionTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
